[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/characters/player/player.gd" type="Script" id=2]
[ext_resource path="res://scenes/characters/character.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/characters/player/player_controller.gd" type="Script" id=6]
[ext_resource path="res://resources/sounds/377206__tnturner__tinnitus.mp3" type="AudioStream" id=8]
[ext_resource path="res://scenes/characters/player/tinnitus.gd" type="Script" id=9]
[ext_resource path="res://scenes/characters/player/FPSControlMode.gd" type="Script" id=10]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=17]
material = SubResource( 1 )
size = Vector3( 0.3, 0.1, 0.5 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.462745, 0.733333, 1, 1 )

[sub_resource type="CapsuleMesh" id=18]
material = SubResource( 3 )
radius = 0.3
mid_height = 1.2
radial_segments = 16
rings = 4

[sub_resource type="Shader" id=12]
code = "shader_type spatial;
render_mode unshaded, cull_disabled, depth_draw_never, depth_test_disable;

const float INNER_RADIUS_SQR = -0.05*0.05;
const float OUTER_RADIUS_SQR = 0.05*0.05;
const float SMOOTH = 0.002;

varying vec3 position;

void vertex() {
	position = VERTEX;
}

void fragment() {
	float dist_sqr = position.x*position.x + position.y*position.y;
	float mask = smoothstep(OUTER_RADIUS_SQR + SMOOTH, OUTER_RADIUS_SQR, dist_sqr);
	mask *= smoothstep(INNER_RADIUS_SQR - SMOOTH, INNER_RADIUS_SQR, dist_sqr);
	ALPHA = mask;
}"

[sub_resource type="ShaderMaterial" id=8]
render_priority = 110
shader = SubResource( 12 )

[sub_resource type="QuadMesh" id=13]
material = SubResource( 8 )

[sub_resource type="CubeMesh" id=19]
size = Vector3( 0.05, 0.05, 0.05 )

[sub_resource type="SpatialMaterial" id=20]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=21]
flags_unshaded = true
albedo_color = Color( 0.219608, 1, 0, 1 )

[sub_resource type="Curve" id=16]
min_value = -100.0
max_value = 0.0
_data = [ Vector2( 0, -100 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Player" instance=ExtResource( 4 )]
collision_layer = 2
script = ExtResource( 2 )

[node name="FPSCamera" type="Camera" parent="Body" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35, -0.2 )
cull_mask = 1048573

[node name="AimCast" type="RayCast" parent="Body/FPSCamera" index="0"]
enabled = true
cast_to = Vector3( 0, 0, -1.5 )
collision_mask = 585
collide_with_areas = true

[node name="GrabCast" type="RayCast" parent="Body/FPSCamera" index="1"]
enabled = true
cast_to = Vector3( 0, 0, -1.5 )
collision_mask = 65

[node name="ViewportContainer2" type="ViewportContainer" parent="Body/FPSCamera" index="2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Body/FPSCamera/ViewportContainer2" index="0"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="GunCam" type="Camera" parent="Body/FPSCamera/ViewportContainer2/Viewport" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35, -0.2 )
cull_mask = 2

[node name="Sunglasses" type="MeshInstance" parent="Body" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35, -0.198 )
cast_shadow = 0
mesh = SubResource( 17 )
material/0 = null

[node name="BodyMesh" type="MeshInstance" parent="Body" index="2"]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0.9, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="Listener" type="Listener" parent="Body" index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.003488, 1.34281, 0 )
current = true

[node name="Equipment" type="Spatial" parent="Body" index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, -0.4 )

[node name="Hitbox" parent="." index="2" groups=["PLAYER"]]
collision_layer = 4

[node name="PickupArea" parent="." index="4"]
collision_mask = 576

[node name="PlayerAimPoint" type="Spatial" parent="." index="5"]

[node name="Reticle" type="MeshInstance" parent="PlayerAimPoint" index="0"]
transform = Transform( 1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0, 0 )
mesh = SubResource( 13 )
material/0 = null

[node name="PlayerController" type="Node" parent="." index="6"]
script = ExtResource( 6 )
throw_strength = 10.0
grab_strength = 4.0

[node name="FPSControlMode" type="Node" parent="PlayerController" index="0"]
script = ExtResource( 10 )
_camera = NodePath("../../Body/FPSCamera")
_aimcast = NodePath("../../Body/FPSCamera/AimCast")
_grabcast = NodePath("../../Body/FPSCamera/GrabCast")

[node name="MeshInstance" type="MeshInstance" parent="PlayerController" index="1"]
cast_shadow = 0
mesh = SubResource( 19 )
material/0 = SubResource( 20 )

[node name="MeshInstance2" type="MeshInstance" parent="PlayerController" index="2"]
cast_shadow = 0
mesh = SubResource( 19 )
material/0 = SubResource( 21 )

[node name="Tinnitus" type="AudioStreamPlayer" parent="." index="7"]
process_priority = 100
stream = ExtResource( 8 )
volume_db = -31.0
script = ExtResource( 9 )
curve = SubResource( 16 )

[connection signal="area_entered" from="Hitbox" to="Hitbox" method="hit"]
